# moonlight-tv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_docker_log.txt  build_log.txt  repo.json
.github/workflows/: release.yml
cmake/: AresPackage.cmake
deploy/webosbrew/: com.aurora.gamestream.yml
docs/: .smbdeleteAAA70000000dbd96  BUILD_WEBOS.md  CTM_USBIP.md  WEBOS_HOMEBREW.md
scripts/webos/: .smbdeleteAAA50000000dbdec  build_for_lg.sh  build_with_docker.ps1  docker_build_inner.sh  easy_build.sh  po2json.awk
scripts/windows/: build_ctm_usbip.ps1
src/app/: app_settings.c  app_settings.h
src/app/hid_passthrough/: CMakeLists.txt  ctm_bridge_protocol.h  ctm_hid.c  ctm_hid.h  ctm_transport.c  ctm_transport.h  enet_transport.h  hid_device.c  hid_passthrough_manager.c  hid_passthrough_manager.h  hid_pt_device_prefs.c  hid_pt_device_prefs.h  hid_pt_gamepad_match.c  hid_pt_gamepad_match.h
src/app/hid_passthrough/ctm/: ctm_settings.h  ctm_state.c  ctm_state.h  ui_bridge.c  ui_devices.c
src/app/hid_passthrough/ctm/controllers/: controller_common.c  controller_ds4.c  controller_ds5.c  controller_flydigi.c  controller_generic.c  controller_steam_puck.c  controller_xbox.c  ctm_controller.h
src/app/hid_passthrough/ctm/monitor/: ctm_monitor.c  ctm_monitor.h
src/app/lvgl/input/: lv_drv_sdl_key.c
src/app/lvgl/theme/: lv_theme_moonlight.c  lv_theme_moonlight_colors.h
src/app/platform/common/: i18n_gettext.c
src/app/platform/webos/: app_webos.c  i18n_webos.c  keyboard_webos.c
src/app/res/tools/: package-lock.json  package.json
src/app/stream/: session.c  session.h  session_worker.c
src/app/stream/connection/: session_connnection.c
src/app/stream/input/: session_gamepad.c  session_input.c  session_input.h  session_keyboard.c
src/app/stream/video/: session_video.c  session_video.h
src/app/ui/: root.c
src/app/ui/launcher/: appitem.view.c  apps.controller.c  apps.controller.h  coverloader.c  launcher.controller.c  launcher.controller.h  launcher.view.c
src/app/ui/settings/: settings.controller.c  settings.controller.h  (+1 more)
src/app/util/: i18n.h  user_event.h
src/i18n/: messages.pot
src/i18n/pt-BR/: messages.po
(+10 files in other folders)
